--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# NO NEED IMAGES
+sp.png
+gs.png
+gstat.png
+buffer.png
+
 # compiled output
 /dist
 /tmp
