--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # NO NEED IMAGES
-sp.png
-gs.png
-gstat.png
-buffer.png
+*.png
+!asset/*
 
 # PEM
 ssh.pem
